Added command factory for os compatibility